# haiku

./: .env.example  .gitignore  docker-compose.yml  generate-env.sh
api/: Cargo.toml
api/bruno/: add users.bru  delete user.bru  destroy user.bru
api/bruno/users/: add users.bru  delete user.bru  destroy user.bru
api/src/: main.rs
api/src/app/: config.rs  middlewares.rs  mod.rs  routes.rs  schemas.rs  server.rs
api/src/haiku/: entity.rs
api/src/prompts/: entity.rs  resolver.rs  schema.rs
api/src/users/: entity.rs  mod.rs  resolver.rs  schema.rs
migrations/: 20250307215524_users_table.sql  20250309000901_prompts_table.sql  20250309001000_prompts_table.sql  20250309002000_haikus_table.sql  20250309003000_haikus_user_relation.sql  20250309010832_haikus_table.sql  20250309010954_haikus_user_relation.sql
